# rag-radiology-reports

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
corpus/: sample_reports.jsonl
notebooks/: 01_validation.ipynb
results/: metrics.json
scripts/: download_data.py  evaluate.py
src/rag_reports/: __init__.py  chunking.py  corpus.py  evaluation.py  generator.py  rag.py  retriever.py  sample_corpus.py
tests/: test_app_smoke.py  test_chunking.py  test_corpus.py  test_evaluation.py  test_generator.py  test_rag.py  test_retriever.py
