[project]
name = "rag-radiology-reports"
version = "0.1.0"
description = "RAG locale su referti radiologici sintetici con citazioni alle fonti e anti-allucinazione (TF-IDF + Ollama/fallback estrattivo)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "requests>=2.31",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dense = [
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_reports"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
